<resources>
    <string name="app_name">My Notepad</string>
    <string name="notes">Notes</string>
    <string name="to_dos">to-dos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faqs">FAQs</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="timestamp">Timestamp</string>
    <string name="delete_note_icon">Delete note icon</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="add_note">Add Note</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="instagram">instagram</string>
    <string name="whatsapp">whatsapp</string>
    <string name="share">share</string>
    <string name="search">Search</string>
    <string name="grid">Grid</string>
    <string name="view">View</string>
    <string name="linear">Linear</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>


    <string name="my_notepad_inc">My Notepad Inc.</string>
    <string name="privacy_updated">[Last Updated: 10/06/2022]</string>

    <string name="pr_text">Protecting your privacy is an important aspect to My Notepad Inc. With this in mind we are providing this “Privacy Policy” to explain our practices regarding the collection, processing, use and disclosure of information store in the App.</string>

    <string name="policy_revision">Revision to this Privacy Policy</string>
    <string name="policy_revision_text">Any information collected via our service is governed by the Privacy Policy in effect at the time such information is collected. We may revise this Privacy Policy from time to time. In case any material changes are made to this Privacy Policy, we’ll notify you those changes by either posting, emailing them or other notification. We’ll update the “Last Updated” date above to indicate when those changes will become effective.</string>

    <string name="information_collection">Collection of Information</string>
    <string name="information_collection_text">None of your personal information will be collected. This includes individual identifiable information, information that identifies or may with reasonable effort identify an individual.</string>

    <string name="information_we_share">Information that we Share with Third parties</string>
    <string name="information_we_share_text">We will not share your personal information collected by us</string>

    <string name="other_sites_links">Links to Other sites</string>
    <string name="other_sites_links_text">Our Service may contain links to websites and services that are owned or operated by third parties. Any information that you provide on or to a Third-party or that is collected by a Third-party Service is provided directly to the owner or operator of the Third-party Service and is subject to the owner’s or operator’s privacy policy. We re not responsible for the content, privacy or security practices of any Third-party Service. To protect your information, we recommend that you carefully review the privacy policy of all Third-party services that you access. </string>

    <string name="terms_updated">[Last Updated: 10/06/2022]</string>

    <string name="tr_text">Welcome to My Notepad mobile device application. Please read these Terms of Service because they govern your use of our application Services.</string>

    <string name="agreement_to_terms">Agreement to Terms</string>
    <string name="agreement_to_terms_text">By using our App, you agree to be bound by these Terms. If you don\'t agree to these terms do not use the Services.</string>

    <string name="changes_of_terms_of_service">Changes to Terms of Service</string>
    <string name="changes_of_terms_of_service_text">We may modify the Terms at any time, in our sole discretion. If we do so, we\'ll let you know by posting modified Terms or through other communications. It is important that you review the terms whenever we modify them because if you continue to use the Services after we have updated modified Terms, you indicate that you agree to be bound by the modified Terms. If you do not agree to be bound then you may not use the Services anymore.</string>
    <string name="more_changes_of_terms_of_service_text">Because our Service is evolving, we may change or discontinue all or any part of the Service at any time and without notice, at our sole discretion</string>

    <string name="provision_of_services">Provision of Services</string>
    <string name="provision_of_services_text">The Service gives you, as a user, the opportunity to take and edit notes with a few background themes.</string>
    <string name="more_provision_of_services_text">Subject to your compliance with the terms you can use the service to type, save and edit text content which you are authorised to access on the App database stored on your device.</string>
    <string name="pin_unpin">Pin/Unpin</string>
    <string name="delete">Delete</string>
    <string name="search_here">Search here</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="language">Language</string>
    <string name="enter_note_title">Note title</string>
    <string name="enter_note_description">Enter note description</string>


</resources>