<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/black"
        app:showAsAction="always"
        tools:targetApi="o"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:title="@string/rate"
        android:id="@+id/rate"
        app:showAsAction="never"
        android:icon="@drawable/rate_icn"/>
    <item
        android:title="@string/share"
        android:id="@+id/share"
        app:showAsAction="never"
        android:icon="@drawable/share_icn"/>
    <item
        android:title="@string/language"
        android:id="@+id/lang"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terms"
        android:title="@string/terms_of_service"
        app:showAsAction="never"/>
    <item
        android:title="@string/privacy_policy"
        android:id="@+id/privacy"
        app:showAsAction="never"/>
</menu>