<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:title="@string/grid"
        android:id="@+id/grid"
        app:showAsAction="never"
        android:icon="@drawable/grid_icn"/>
    <item
        android:title="@string/linear"
        android:id="@+id/line"
        app:showAsAction="never"
        android:icon="@drawable/line_icn"/>

    <item android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/black"
        app:showAsAction="always"
        tools:targetApi="o"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:title="@string/about"
        android:id="@+id/help"
        app:showAsAction="never"
        android:icon="@drawable/help_icn"/>
    <item
        android:title="@string/rate"
        android:id="@+id/rate"
        app:showAsAction="never"
        android:icon="@drawable/rate_icn"/>
    <item
        android:title="@string/share"
        android:id="@+id/share"
        app:showAsAction="never"
        android:icon="@drawable/share_icn">
    </item>
</menu>