<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:id="@+id/cardV"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/relative_yell"
        android:id="@+id/cardRelative">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/lay">

            <TextView
                android:layout_weight="1"
                android:id="@+id/idTVNoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="2dp"
                android:padding="4dp"
                android:textStyle="bold"
                android:text="@string/note_title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/pin"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0"
                android:clickable="true"
                android:contentDescription="@string/delete_note_icon"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/icn_pin"
                android:visibility="visible"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/idNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/lay"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="0dp"
            android:padding="2dp"
            android:text="@string/note_description"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idNoteDesc"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:id="@+id/idTVTimeStamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/timestamp"
                android:textColor="#000000"
                android:textSize="12sp" />

            <ImageView
                android:layout_weight="0"
                android:id="@+id/idIVDelete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete_note_icon" />
        </LinearLayout>
    </RelativeLayout>



</androidx.cardview.widget.CardView>