<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    tools:context=".MainActivity">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:iconifiedByDefault="true"
            android:queryHint="@string/search"
            android:queryBackground="@android:color/transparent"
            android:background="@drawable/search_view_bg"
            android:layout_alignParentTop="true"
            app:queryHint="@string/search_here"/>
            <!--android:layout_alignParentTop="false"-->

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVNotes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        tools:listitem="@layout/note_rv_item"
        android:layout_below="@+id/toolbar"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-2588351734423726/9417604996">
    </com.google.android.gms.ads.AdView>

        <!--android:layout_above="@+id/tabLayout" in FAB-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/idFABAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/main_fab_bg"
                android:contentDescription="@string/floating_action_button"
                android:src="@drawable/ic_add"
                app:backgroundTint="#615F5F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/addNoteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/fab_text_bg"
            android:paddingStart="18dp"
            android:paddingTop="8dp"
            android:paddingEnd="18dp"
            android:paddingBottom="8dp"
            android:text="@string/add_note"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/fab"
            app:layout_constraintEnd_toStartOf="@+id/fab"
            app:layout_constraintTop_toTopOf="@+id/fab" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/floating_action_button"
            android:src="@drawable/newnote"
            android:visibility="invisible"
            app:backgroundTint="#615F5F"
            app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/BtmTab"
        app:tabGravity="fill"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_dos"
            app:tint="@color/white" />

    </com.google.android.material.tabs.TabLayout> -->


</RelativeLayout>

